# ferros

./: .gitignore  Cargo.toml  build.sh  linker.ld  my_os.iso
.cargo/: config.toml
iso/: limine.conf
iso/boot/: kernel
src/: ata.rs  fat.rs  gdt.rs  interrupts.rs  main.rs  program.rs  screen.rs
src/processes/: frame_allocator.rs  loader.rs  memory.rs  mod.rs  models.rs  syscall.rs  test.asm  usermode.rs
src/processes/c_test/: ferros.h  lib.s  main.c
src/processes/test/: compiler.py  input.txt  output.asm  pars.asm  std.asm
src/program/shell/: Dispatcher.rs  mod.rs
src/program/shell/Dispatcher/: commends.rs
