[package]
name = "my_os"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.6"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
pic8259 = "0.11"
spin = "0.9"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
heapless = "0.9.3"

[profile.dev]
panic = "abort"
lto = true
incremental = false

[profile.release]
panic = "abort"
lto = true
